--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
+    "@mui/lab": "^6.0.0-beta.19",
     "@mui/material": "^6.2.0",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
