--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^6.2.0",
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
