--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^11.14.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
