--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
-    "recharts": "^2.10.3"
+    "react-tsparticles": "^2.12.2",
+    "recharts": "^2.10.3",
+    "tsparticles": "^3.7.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
